# rinha-de-backend

./: Cargo.toml  Dockerfile  docker-compose.yml  executar-teste-local.ps1  map.md  script.sql
src/: controllers.rs  dto.rs  main.rs  model.rs  services.rs
