[package]
name = "rinha-de-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
deadpool-postgres = "0.12.1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
