[package]
name = "rinha-de-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
chrono = "0.4"
deadpool-postgres = "0.12" # Minor version specified more flexibly
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7" # Minor version specified more flexibly
uuid = { version = "1", features = ["v4", "fast-rng"] }
